--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   dartz: ^0.10.1
   gap: ^3.0.1
   infinite_scroll_pagination: ^4.0.0
+  geolocator: ^10.1.0
+  geocoding: ^2.0.0
 
 dev_dependencies:
   flutter_test:
